# rust_edr_agent

./: .gitignore  CLAUDE.md  Cargo.toml  INJECTION_DETECTOR_INTEGRATION.md  README.md  config.yaml  edr_project_structure.sh  find_duplicates.py  test_dns_anomaly_detection.rs  test_linux_context.rs  test_linux_detection.rs  test_mac_detection.rs
.github/: CODEOWNERS  FUNDING.yml
docs/: ADVANCED_DETECTION_ENGINE.md  API_REFERENCE.md  COMPRESSION.md  DETAILED_USAGE.md  DETECTION_CONFIGURATION.md  DETECTION_QUICK_REFERENCE.md  DEVELOPMENT.md  DNS_ANOMALY_DETECTION.md  LINUX_DETECTION.md  PERFORMANCE.md  REGISTRY_MONITORING.md  SMART_DEDUPLICATION.md  TODO.md  TROUBLESHOOTING.md  USAGE.md
src/: agent.rs  collectors.rs  config.rs  config.yaml  deduplication.rs  detectors.rs  edr_main.rs  events.rs  lib.rs  network.rs  storage.rs  utils.rs
src/collectors/: file.rs  manager.rs  network.rs  process.rs  registry.rs
src/detectors/: behavioral.rs  dns_anomaly.rs  injection.rs  manager.rs  registry.rs
src/detectors/injection/: types.rs
